# mal

./: .gitignore  Makefile  README.md
haskell/: Makefile  build.sh
haskell/step0/: step0.cabal
haskell/step0/.stack-work/install/x86_64-linux/lts-7.9/8.0.1/flag-cache/: ghc-paths-0.1.0.9-GIOnKzk0HmEBZ77Q1HsThK  intero-0.1.18  step0-0.1.0.0-9V42r1AySSi5kROt9F3iMd  step0-0.1.0.0-DEYL306Lz9e39w5oRmp5H5  syb-0.6-C65vWCsht6A8uLstpQIXyj
haskell/step0/.stack-work/install/x86_64-linux/lts-7.9/8.0.1/lib/x86_64-linux-ghc-8.0.1/step0-0.1.0.0-9V42r1AySSi5kROt9F3iMd/: Mal.dyn_hi
haskell/step0/.stack-work/install/x86_64-linux/lts-7.9/8.0.1/pkgdb/: package.cache  step0-0.1.0.0-9V42r1AySSi5kROt9F3iMd.conf
haskell/step0/.stack-work/intero/: intero3057Tob.hs
haskell/step0/.stack-work/intero/intero30575TP/: Lib.hi  Main.hi
haskell/step0/.stack-work/intero/intero3057gyh/: Main.hi  Mal.hi
haskell/step0/.stack-work/intero/intero3057sJJ/: Main.hi  Mal.hi
haskell/step0/app/: Main.hs
haskell/step1/: step1.cabal
haskell/step1/.stack-work/install/x86_64-linux/lts-7.9/8.0.1/flag-cache/: exceptions-0.8.3-7py7fmRxowDFpHmiHGKrTb  hashable-1.2.4.0-EMu4H7FB10MAl6hwKw992G  megaparsec-5.0.1-Kbr1rj2aE5WBrRq6kJu93J  mtl-2.2.1-6qsR1PHUy5lL47Hpoa4jCM  primitive-0.6.1.0-Ip44DqhfCp21tTUYbecwa  scientific-0.3.4.9-6oTYuCcx6H5BsTGU7D2Gk3  step1-0.1.0.0-5XwJlxJlli48JHuD6Qhc1j  stm-2.4.4.1-4z2NRWnB0NIIUvSJsHW0kF  text-1.2.2.1-5QpmrLQApEZ4Ly9nMHWY0s  transformers-compat-0.5.1.4-81lZyuOJOvsD0zyCv2TKld  vector-0.11.0.0-BEDZb5o2QOhGbIm6ky7rl6
haskell/step1/.stack-work/install/x86_64-linux/lts-7.9/8.0.1/lib/x86_64-linux-ghc-8.0.1/step1-0.1.0.0-5XwJlxJlli48JHuD6Qhc1j/: Mal.dyn_hi  Mal.hi
haskell/step1/.stack-work/install/x86_64-linux/lts-7.9/8.0.1/lib/x86_64-linux-ghc-8.0.1/step1-0.1.0.0-oKA8tnYSHCLvlqYaPQcIG/: Mal.hi
haskell/step1/.stack-work/install/x86_64-linux/lts-7.9/8.0.1/pkgdb/: package.cache  step1-0.1.0.0-oKA8tnYSHCLvlqYaPQcIG.conf
haskell/step1/.stack-work/intero/: intero30576Gu.hs
haskell/step1/.stack-work/intero/intero3057HR0/: Main.hi  Mal.hi
haskell/step1/.stack-work/intero/intero3057gAK/: Main.hi  Mal.hi
haskell/step1/app/: Main.hs
haskell/step1/src/: Lexer.hs  Mal.hs  MalLexer.hs  MalParser.hs  MalTypes.hs
haskell/step1/test/: Spec.hs
haskell/step2/: step2.cabal
haskell/step2/src/: MalPrinter.hs  MalTypes.hs
haskell/step2/test/: Spec.hs
