name:                step0
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/step0#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Mal
  build-depends:       base >= 4.7 && < 5
                     , haskeline
  default-language:    Haskell2010

executable step0_repl
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , haskeline
                     , step0
  default-language:    Haskell2010

test-suite step0-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , step0
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
