name:                step1
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Mal MalLexer MalParser MalPrinter MalTypes
  ghc-options:         -Wall
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , haskeline
                     , megaparsec
  default-language:    Haskell2010

executable step1_read_print
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , containers
                     , haskeline
                     , megaparsec
                     , step1
  default-language:    Haskell2010

test-suite step1-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , step1
                     , tasty
                     , tasty-hunit
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
